telemetry: put inference on the JFR timeline
Three events, emitted from the seams that already measure everything:
Inference at ChatEngine.complete, ModelLoad at the Models.open dispatch
(every architecture and model kind funnels through it), Runtime sampled
every chunk so a recording attached late is still self-describing.

Field names are OpenTelemetry's gen_ai.* vocabulary, so an exporter is a
rename table rather than an interpretation - including the two OTel counts
jinfer could always produce and never reported: reasoning tokens (it has a
reasoning lane) and cache-read tokens. JFR rejects dotted field names, so
the spelling is camelCase and the mapping is in the javadoc.

No listener interface: JFR is the seam. It already carries enable/disable
and, via RecordingStream, in-process subscription, so an exporter consumes
the same events a user sees in JMC instead of a parallel path.

Left out rather than guessed: quantization (general.file_type is an int
enum with no name table here), jam's resolved ISA and core plan (native
prints them, exposes neither). Adding a field is compatible; shipping one
that lies is not.

Tests pin the schema as public API - names go into users' .jfc files - and
assert the event against its own run's numbers, so telemetry cannot drift
from the API it describes. One asserts recording does not change the
generated tokens, which is only checkable because jinfer is deterministic.

A full chat run costs 160 bytes across the three events.